--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -114,4 +114,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="APPLE_LBL" xml:space="preserve">
+    <value>苹果标签</value>
+  </data>
+  <data name="MAX_LIMIT" xml:space="preserve">
+    <value>已经打印条码数量{0}，到达本日的打印上限！</value>
+  </data>
+  <data name="NO_TEMPLATE" xml:space="preserve">
+    <value>模板文件{0}不存在</value>
+  </data>
+  <data name="ERROR" xml:space="preserve">
+    <value>错误</value>
+  </data>
 </root>
